--- a/FirebaseMessenger/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/FirebaseMessenger/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EXc-tK-DhB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Conversations View Controller-->
+        <!--Chats-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversationsViewController" customModule="FirebaseMessenger" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,10 +18,96 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Chats" id="fiq-9w-fy6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="117"/>
+            <point key="canvasLocation" x="132" y="856"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="Dy5-py-MAB">
+            <objects>
+                <viewController id="pcy-H3-pKd" customClass="ProfileViewController" customModule="FirebaseMessenger" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="G0h-CI-adU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HNW-Sl-uID">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mdL-bM-tpX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HNW-Sl-uID" firstAttribute="top" secondItem="mdL-bM-tpX" secondAttribute="top" id="DBO-S8-9Gu"/>
+                            <constraint firstItem="HNW-Sl-uID" firstAttribute="leading" secondItem="mdL-bM-tpX" secondAttribute="leading" id="FnB-WI-KPr"/>
+                            <constraint firstItem="mdL-bM-tpX" firstAttribute="bottom" secondItem="HNW-Sl-uID" secondAttribute="bottom" id="Qnb-2w-uIt"/>
+                            <constraint firstItem="mdL-bM-tpX" firstAttribute="trailing" secondItem="HNW-Sl-uID" secondAttribute="trailing" id="cAv-1b-MRy"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Profile" id="vmg-o9-zA2"/>
+                    <connections>
+                        <outlet property="tableView" destination="HNW-Sl-uID" id="ns9-v9-KLf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="joU-EB-yJP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1036" y="852"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="uGg-aG-Kem">
+            <objects>
+                <tabBarController id="EXc-tK-DhB" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IvC-b0-P1a">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="baU-9G-9Uf" kind="relationship" relationship="viewControllers" id="oIJ-mc-kut"/>
+                        <segue destination="09c-6I-zFC" kind="relationship" relationship="viewControllers" id="eku-V4-VFp"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qLE-n8-jbZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="557" y="-613"/>
+        </scene>
+        <!--Chats-->
+        <scene sceneID="qVv-hm-xLI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="baU-9G-9Uf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chats" id="Mfv-lv-rBb"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="E5j-6V-SRN">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="rL1-S2-hwZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9mP-0W-rTd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="116.51785714285714"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="Gde-Ib-uEs">
+            <objects>
+                <navigationController id="09c-6I-zFC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" id="fqY-hO-wUA"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="83h-5R-sCU">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="pcy-H3-pKd" kind="relationship" relationship="rootViewController" id="d7b-bq-P3n"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LLQ-4K-gag" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1035" y="117"/>
         </scene>
     </scenes>
     <resources>
